crates/ferrotype/tests/compile_fail/rpc_missing_params.stderr
error: RPC methods must have at least a self parameter and a request parameter
 --> tests/compile_fail/rpc_missing_params.rs:9:5
  |
9 |     fn method(&self) -> String {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
